--- a/manala.opcache-dashboard/Makefile
+++ b/manala.opcache-dashboard/Makefile
@@ -11,4 +11,4 @@ include .manala/make/Makefile
 ########
 
 ROLE               = manala.opcache-dashboard
-ROLE_DISTRIBUTIONS = debian.wheezy debian.jessie
+ROLE_DISTRIBUTIONS = debian.wheezy debian.jessie debian.stretch
