--- a/manala.mysql/tests/0120_install.mariadb.10.0.yml
+++ b/manala.mysql/tests/0120_install.mariadb.10.0.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: "{{ test }}"
-  hosts: debian
+  hosts: debian.wheezy debian.jessie
   become: true
   vars:
     manala_apt_preferences:
