--- a/manala.mysql/tests/pre_tasks/galera_3.yml
+++ b/manala.mysql/tests/pre_tasks/galera_3.yml
@@ -7,4 +7,13 @@
 
 - name: Pre tasks > Galera 3 apt repository
   apt_repository:
-    repo: deb http://releases.galeracluster.com/galera-3/{{ ansible_distribution|lower }} {{ ansible_distribution_release }} main
+    # [trusted=yes] disable GPG signature check, authorize weak sha1 signature for stretch.
+    repo: deb [trusted=yes] http://releases.galeracluster.com/galera-3/{{ ansible_distribution|lower }} {{ ansible_distribution_release }} main
+
+- name: Pre tasks > Galera 3 apt preferences
+  copy:
+    dest: /etc/apt/preferences.d/galera
+    content: |
+      Package:      galera*
+      Pin:          origin releases.galeracluster.com
+      Pin-Priority: 900
