--- a/manala.mysql/tests/pre_tasks/mariadb_10.1.yml
+++ b/manala.mysql/tests/pre_tasks/mariadb_10.1.yml
@@ -2,8 +2,14 @@
 
 - name: Pre tasks > MariaDB apt key
   apt_key:
-    file: pre_tasks/apt_keys/mariadb.pgp
-    id: 1BB943DB
+    file: "{{ item.file }}"
+    id: "{{ item.id }}"
+  with_items:
+    # wheezy/jessie key
+    - file: pre_tasks/apt_keys/mariadb_legacy.pgp
+      id: 1BB943DB
+    - file: pre_tasks/apt_keys/mariadb.pgp
+      id: C74CD1D8
 
 - name: Pre tasks > MariaDB apt repository 10.1
   apt_repository:
