--- a/manala.mysql/tests/pre_tasks/mysql_5.6.yml
+++ b/manala.mysql/tests/pre_tasks/mysql_5.6.yml
@@ -7,4 +7,4 @@
 
 - name: Pre tasks > Mysql apt repository 5.6
   apt_repository:
-    repo: deb http://repo.mysql.com/apt/{{ ansible_distribution|lower }}/ {{ ansible_distribution_release }} mysql-5.6
+    repo: deb {{ (ansible_distribution_release|string == 'stretch')|ternary('[trusted=yes] ','') }}http://repo.mysql.com/apt/{{ ansible_distribution|lower }}/ {{ ansible_distribution_release }} mysql-5.6
