--- a/manala.ngrok/meta/main.yml
+++ b/manala.ngrok/meta/main.yml
@@ -12,7 +12,9 @@ galaxy_info:
   platforms:
     - name: Debian
       versions:
+        - wheezy
         - jessie
+        - stretch
   galaxy_tags:
     - system
     - ngrok
